# NetGuard-AI

./: .gitignore  LICENSE  README.md  check_python.bat  publish_github.bat  pyproject.toml  run_dashboard.bat  run_step2.bat  run_step3.bat  run_step4.bat  run_step5.bat  run_tests.bat  setup.bat  start_api.bat  train_models.bat
.streamlit/: config.toml
api/: __init__.py  main.py
config/: settings.yaml
dashboard/: app.py  sample_flows.py
data/processed/: meta.json
models/artifacts/: metrics.json
scripts/: download_data.py  preprocess.py  train.py
src/netguard/: __init__.py  config.py  labels.py  predict.py  preprocess.py  train.py
tests/: test_api.py  test_config.py  test_dashboard.py  test_preprocess.py  test_train.py
