[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netguard-ai"
version = "0.1.0"
description = "AI-powered Intrusion Detection System with ML and real-time dashboard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "NetGuard-AI contributors" }]
dependencies = [
  "numpy>=1.26.0,<3.0.0",
  "pandas>=2.1.0,<3.0.0",
  "scikit-learn>=1.4.0,<2.0.0",
  "joblib>=1.3.0,<2.0.0",
  "xgboost>=2.0.0,<3.0.0",
  "PyYAML>=6.0.1,<7.0.0",
  "pydantic>=2.5.0,<3.0.0",
  "pydantic-settings>=2.1.0,<3.0.0",
  "httpx>=0.27.0,<1.0.0",
  "requests>=2.31.0,<3.0.0",
  "fastapi>=0.109.0,<1.0.0",
  "uvicorn[standard]>=0.27.0,<1.0.0",
  "streamlit>=1.31.0,<2.0.0",
  "plotly>=5.18.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-cov>=4.1.0,<6.0.0",
  "ruff>=0.2.0,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
